--- a/site/nginx/files/index.html
+++ b/site/nginx/files/index.html
@@ -1,8 +1,8 @@
 <html>
   <head>
-    <title>Hello from Puppet!</title>
+    <title>ello govonor</title>
   </head>
   <body>
-    <h1>Hello World, Puppet is Fun!</h1>
+    <h1>ello govonor</h1>
   </body>
 </html>
